--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,17 @@
     <groupId>org.springframework.boot</groupId>  
     <artifactId>spring-boot-starter-parent</artifactId>  
     <version>2.7.0</version>
-    <relativePath/>  
+    <relativePath/>
     <!-- lookup parent from repository --> 
   </parent>  
   <groupId>com.sat</groupId>  
   <artifactId>satellite</artifactId>
-  <version>6.0.0</version>  
+  <version>0.0.1-SNAPSHOT</version>
   <name>satellite</name>
   <description>Satellite Official Website</description>
-  <properties> 
-    <java.version>1.8</java.version>
+  <properties>
+    <java.version>17</java.version>
+    <spring-cloud.version>2021.0.3-SNAPSHOT</spring-cloud.version>
   </properties>
   <dependencies>
 
@@ -53,6 +54,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
+
 
     <!--Google auth-->
     <dependency>
@@ -169,6 +176,18 @@
     </dependency>
 
   </dependencies>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <build> 
     <plugins> 
       <plugin> 
